feat: add support for managing custom PKCS#11 libraries via CLI and auto-discovery; add support for building CLI installation packages for Windows (.exe, .msi), Linux (.deb, .rpm) and macOS (.dmg)